Added zoom control, fullscreen control and map type for the yandex map api

--- a/language/en-GB/en-GB.mod_seoclick_map.ini
+++ b/language/en-GB/en-GB.mod_seoclick_map.ini
@@ -19,6 +19,7 @@ MOD_SEOCLICK_MAP_LNG="Longitude"
 MOD_SEOCLICK_MAP_CONTROLS="Map controls"
 MOD_SEOCLICK_MAP_CONTROLS_CUSTOM="Custom map controls"
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM="Zoom control"
+MOD_SEOCLICK_MAP_CONTROLS_ZOOM_WHEEL="Zoom control by wheel"
 MOD_SEOCLICK_MAP_CONTROLS_MAPTYPE="Map type control"
 MOD_SEOCLICK_MAP_CONTROLS_STREET_VIEW="Street view control"
 MOD_SEOCLICK_MAP_CONTROLS_FULLSCREEN="Fullscreen"
