--- a/language/ru-RU/ru-RU.mod_seoclick_map.ini
+++ b/language/ru-RU/ru-RU.mod_seoclick_map.ini
@@ -18,6 +18,7 @@ MOD_SEOCLICK_MAP_LAT="Широта"
 MOD_SEOCLICK_MAP_LNG="Долгота"
 MOD_SEOCLICK_MAP_CONTROLS="Элементы управления"
 MOD_SEOCLICK_MAP_CONTROLS_CUSTOM="Пользовательские элементы управления"
+MOD_SEOCLICK_MAP_CONTROLS_ZOOM_WHEEL="Управление масштабом колесом мыши"
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM="Управление масштабом"
 MOD_SEOCLICK_MAP_CONTROLS_MAPTYPE="Управление типом карты"
 MOD_SEOCLICK_MAP_CONTROLS_STREET_VIEW="Управление отображением улиц"
