--- a/language/en-GB/en-GB.mod_seoclick_map.ini
+++ b/language/en-GB/en-GB.mod_seoclick_map.ini
@@ -9,9 +9,13 @@ MOD_SEOCLICK_MAP_GOOGLE_KEY_DESCRIPTION="Api key, received on google"
 MOD_SEOCLICK_MAP_MAIN_OPTIONS="Main settings"
 MOD_SEOCLICK_MAP_HEIGHT="Map height in px"
 MOD_SEOCLICK_MAP_ZOOM="Map zoom"
+MOD_SEOCLICK_MAP_MARKER_CLICK_ZOOM="Map zoom on marker click"
 MOD_SEOCLICK_MAP_MARKER_IMAGE="Marker image"
 MOD_SEOCLICK_MAP_INFO_WINDOW="Information window"
-MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT="The content of the information window"
+MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE="Image"
+MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE_DESCRIPTION="A image for a information window"
+MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT="Content"
+MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT_DESCRIPTION="A content of a information window"
 MOD_SEOCLICK_MAP_CENTER_COORD="Map center coordinates"
 MOD_SEOCLICK_MAP_COORD="Coordinates"
 MOD_SEOCLICK_MAP_LAT="Latitude"
