--- a/language/ru-RU/ru-RU.mod_seoclick_map.ini
+++ b/language/ru-RU/ru-RU.mod_seoclick_map.ini
@@ -9,9 +9,13 @@ MOD_SEOCLICK_MAP_GOOGLE_KEY_DESCRIPTION="Api ключ, полученный на
 MOD_SEOCLICK_MAP_MAIN_OPTIONS="Основные настройки"
 MOD_SEOCLICK_MAP_HEIGHT="Высота карты в px"
 MOD_SEOCLICK_MAP_ZOOM="Масштаб карты"
+MOD_SEOCLICK_MAP_MARKER_CLICK_ZOOM="Масштаб при клике на маркер"
 MOD_SEOCLICK_MAP_MARKER_IMAGE="Изображение маркера"
 MOD_SEOCLICK_MAP_INFO_WINDOW="Информационное окно"
-MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT="Содержимое информационного окна"
+MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE="Изображение"
+MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE_DESCRIPTION="Изображение в информационном окне"
+MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT="Текст"
+MOD_SEOCLICK_MAP_INFO_WINDOW_CONTENT_DESCRIPTION="Содержимое информационного окна"
 MOD_SEOCLICK_MAP_CENTER_COORD="Координаты центра карты"
 MOD_SEOCLICK_MAP_COORD="Координаты"
 MOD_SEOCLICK_MAP_LAT="Широта"
