--- a/language/en-GB/en-GB.mod_seoclick_map.ini
+++ b/language/en-GB/en-GB.mod_seoclick_map.ini
@@ -11,6 +11,12 @@ MOD_SEOCLICK_MAP_HEIGHT="Map height in px"
 MOD_SEOCLICK_MAP_ZOOM="Map zoom"
 MOD_SEOCLICK_MAP_MARKER_CLICK_ZOOM="Map zoom on marker click"
 MOD_SEOCLICK_MAP_MARKER_IMAGE="Marker image"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_WIDTH="Marker width"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_HEIGHT="Marker height"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_X="X axis marker shift"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_X_DESCRIPTION="Shift of the marker along the X axis in pixels relative to the anchor point (set if the 'leg' of the icon is not in the upper left corner of the image."
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_Y="Y axis marker shift"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_Y_DESCRIPTION="Shift of the marker along the Y axis in pixels relative to the anchor point (set if the 'leg' of the icon is not in the upper left corner of the image."
 MOD_SEOCLICK_MAP_INFO_WINDOW="Information window"
 MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE="Image"
 MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE_DESCRIPTION="A image for a information window"
@@ -22,6 +28,11 @@ MOD_SEOCLICK_MAP_LAT="Latitude"
 MOD_SEOCLICK_MAP_LNG="Longitude"
 MOD_SEOCLICK_MAP_CONTROLS="Map controls"
 MOD_SEOCLICK_MAP_CONTROLS_CUSTOM="Custom map controls"
+MOD_SEOCLICK_MAP_CONTROLS_GEOLOCATION="Geolocation"
+MOD_SEOCLICK_MAP_CONTROLS_SEARCH="Search"
+MOD_SEOCLICK_MAP_CONTROLS_ROUTE="Route"
+MOD_SEOCLICK_MAP_CONTROLS_TRAFFIC="Traffic"
+MOD_SEOCLICK_MAP_CONTROLS_RULER="Ruler"
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM="Zoom control"
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM_WHEEL="Zoom control by wheel"
 MOD_SEOCLICK_MAP_CONTROLS_MAPTYPE="Map type control"
