--- a/language/ru-RU/ru-RU.mod_seoclick_map.ini
+++ b/language/ru-RU/ru-RU.mod_seoclick_map.ini
@@ -11,6 +11,12 @@ MOD_SEOCLICK_MAP_HEIGHT="Высота карты в px"
 MOD_SEOCLICK_MAP_ZOOM="Масштаб карты"
 MOD_SEOCLICK_MAP_MARKER_CLICK_ZOOM="Масштаб при клике на маркер"
 MOD_SEOCLICK_MAP_MARKER_IMAGE="Изображение маркера"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_WIDTH="Ширина маркера"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_HEIGHT="Высота маркера"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_X="Сдвиг маркера по оси Х"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_X_DESCRIPTION="Cдвиг маркера по оси Х в пикселах относительно точки привязки (задается, если 'ножка' значка не находится в левом верхнем углу изображения."
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_Y="Сдвиг маркера по оси У"
+MOD_SEOCLICK_MAP_MARKER_IMAGE_OFFSET_Y_DESCRIPTION="Cдвиг маркера по оси Y в пикселах относительно точки привязки (задается, если 'ножка' значка не находится в левом верхнем углу изображения."
 MOD_SEOCLICK_MAP_INFO_WINDOW="Информационное окно"
 MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE="Изображение"
 MOD_SEOCLICK_MAP_INFO_WINDOW_IMAGE_DESCRIPTION="Изображение в информационном окне"
@@ -20,13 +26,22 @@ MOD_SEOCLICK_MAP_CENTER_COORD="Координаты центра карты"
 MOD_SEOCLICK_MAP_COORD="Координаты"
 MOD_SEOCLICK_MAP_LAT="Широта"
 MOD_SEOCLICK_MAP_LNG="Долгота"
+
 MOD_SEOCLICK_MAP_CONTROLS="Элементы управления"
 MOD_SEOCLICK_MAP_CONTROLS_CUSTOM="Пользовательские элементы управления"
+
+MOD_SEOCLICK_MAP_CONTROLS_GEOLOCATION="Геолокация"
+MOD_SEOCLICK_MAP_CONTROLS_SEARCH="Поиск"
+MOD_SEOCLICK_MAP_CONTROLS_ROUTE="Маршрутизация"
+MOD_SEOCLICK_MAP_CONTROLS_TRAFFIC="Пробки"
+MOD_SEOCLICK_MAP_CONTROLS_RULER="Линейка"
+
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM_WHEEL="Управление масштабом колесом мыши"
 MOD_SEOCLICK_MAP_CONTROLS_ZOOM="Управление масштабом"
 MOD_SEOCLICK_MAP_CONTROLS_MAPTYPE="Управление типом карты"
 MOD_SEOCLICK_MAP_CONTROLS_STREET_VIEW="Управление отображением улиц"
 MOD_SEOCLICK_MAP_CONTROLS_FULLSCREEN="Управление полноэкранным режимом"
+
 MOD_SEOCLICK_MAP_PLACES="Места на карте"
 MOD_SEOCLICK_MAP_PLACES_LIST="Список мест"
 MOD_SEOCLICK_MAP_PLACES_NAME="Название места"
